Allvideos styling and responsive styles. Fixed messages z-index issue.

--- a/administrator/components/com_k2/css/plugins.css
+++ b/administrator/components/com_k2/css/plugins.css
@@ -112,4 +112,6 @@ disabled look for disabled choices in the results dropdown
 .select2-drop-mask { border: 0; margin: 0; padding: 0; position: fixed; left: 0; top: 0; min-height: 100%; min-width: 100%; height: auto; width: auto; opacity: 0; z-index: 9998; background-color: #fff; filter: alpha(opacity=0); }
 .select2-hidden-accessible { position: absolute; clip: rect(0,0,0,0); }
 
-
+/* AllVideos */
+.avPlayerContainer { max-width: 100%; position: relative; padding: 0 0 56%; }
+	.avPlayerContainer iframe, .avPlayerContainer object, .avPlayerContainer video, .avPlayerContainer embed { max-width: 100%; position: absolute; left: 0; top: 0; width: 100%; height: 100%; }
